Tailwind css ile arayüz düzenlemeleri yapıldı. Jest test altyapısı kuruldu ve admin auth testi eklendi.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,19 +13,22 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["jest", "node"],
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    ]
   },
   "include": [
-    "next-env.d.ts", "**/*.ts", 
-    "**/*.tsx", ".next/types/**/*.ts",
-    "src/types/**/*.d.ts"
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/__tests__/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
